@@ -16,9 +16,10 @@ First install the following dependencies:
 
 Under Ubuntu, these dependencies are in the following packages:
 
-python-cherrypy3 python-setuptools python-virtualenv python-qt4-dev python-sip
-python-sip-dev pyqt4-dev-tools qt4-designer libqt4-sql python-qt4-sql
-libqt4-sql-sqlite python-matplotlib python-qt4-phonon python-sphinx
+python-cherrypy3 python-apsw python-setuptools python-virtualenv python-qt4-dev
+python-sip4 python-sip4-dev pyqt4-dev-tools qt4-designer libqt4-sql
+python-qt4-sql libqt4-sql-sqlite python-matplotlib python-qt4-phonon
+python-sphinx
 
 
 2) MAC OS/X
